index_styles changes to align the border correctly / get rid of the overflow

--- a/static/styles/index_styles.css
+++ b/static/styles/index_styles.css
@@ -1,14 +1,16 @@
 /* main content */
 .content {
-    width: 100%;
-    max-width: none;
+    width: 90%;
+    max-width: 900px;
     padding: 10px;
     margin: 1em auto;
     text-align: center;
+    align-items: center;
     background-color: white;
 }
 
 .content div {
+    max-width: 100%;
     margin: 20px 0;
     padding: 15px;
     border: 2px solid black;
@@ -16,15 +18,6 @@
     background-color: #f9f9f9;
     box-shadow: 0 2px 6px rgb(0,90,139);
     line-height: 1.6;
-}
-
-.content h3 {
-    display: inline-block;
-    margin: 5px 0;
-    padding: 3px;
-    border: 2px ridge black;
-    border-radius: 4px;
-    background-color: #f9f9f9;
-    box-shadow: 0 2px 6px rgb(0,90,139);
-    line-height: 1.6;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
 }
